--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://git.xvrqt.com/amy/user-error"
 license = "BSD-3-Clause"
 readme = "README.md"
 description = "Simple error type that display in a clear and beautiful manner to the user of a CLI application."
-keywords = ["errors", "pretty print", "struct", "xvrqt"]
+keywords = ["errors", "pretty-print", "struct", "xvrqt"]
 categories = ["data-structures", "command-line-interface"]
 
 [dependencies]
