--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "user-error"
-version = "1.0.2"
+version = "1.0.3"
 authors = ["Amy <git@xvrqt.com>"]
 edition = "2018"
 repository = "https://git.xvrqt.com/amy/user-error.git"
@@ -12,6 +12,7 @@ keywords = ["errors", "pretty-print", "struct", "xvrqt"]
 categories = ["data-structures", "command-line-interface"]
 
 [dependencies]
-colorful = "0.2.1"
-rusqlite = "0.19.0"
+scrawl   = "^0.1.1"
+colorful = "^0.2.1"
+rusqlite = "^0.19.0"
 
