Updated the homepage and repo link to GitLab

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "user-error"
 version = "1.2.8"
 authors = ["Amy <git@xvrqt.com>"]
 edition = "2018"
-repository = "https://github.com/xvrqt/user-error.git"
-homepage = "https://github.com/xvrqt/user-error"
+repository = "https://gitlab.com/rust-crates/user-error.git"
+homepage = "https://gitlab.com/rust-crates/user-error"
 license-file = "LICENSE.txt"
 readme = "README.md"
 keywords = ["errors", "pretty-print", "struct", "xvrqt"]
